5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1826_3185.log
== TEST (2019-06-12 19:01:30) 
-- CODE:
from numpy import*

a = input("digite a palava: ")split()
print(size(a))
-- ERROR:
File "XXXX", line 3
    a = input()split()
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:01:55) 
-- CODE:
from numpy import*

a = input("digite a palava: ")split('')
print(size(a))
-- ERROR:
File "XXXX", line 3
    a = input()split('')
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:02:10) 
-- CODE:
from numpy import*

a = input("digite a palava: ").split()
print(size(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:02:36) 
-- CODE:
from numpy import*

a = input("digite a palava: ").split('')
print(size(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:05:44) 
-- CODE:
from numpy import*

a = input("digite a palava: ").split(',')
print(size(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:05) 
-- CODE:
from numpy import*

a = input("digite a palava: ").split('')
print(size(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:09:29) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
print(a[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:10:32) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
print(a[-1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:11:32) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
for i in range(a[0], a[-1]):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:12:00) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
for i in range(a):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:12:27) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
for i in a:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:15:02) 
-- CODE:
from numpy import*
b = 0
c = -1
a = input("digite a palava: ")
for i in a:
	b = b + a[]
	c = c + 1
-- ERROR:
File "XXXX", line 6
    b = b + a[]
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:15:08) 
-- CODE:
from numpy import*
b = 0
c = -1
a = input("digite a palava: ")
for i in a:
	b = b + a[c]
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:16:47) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
for i in a:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:18:35) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
for i in a:
	s = "" +i
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:18:49) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
for i in a:
	s = "" +i
	
	
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:19:14) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
for i in a:
	s = s + "" + i
	
	
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:19:28) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
for i in a:
	s = s + "" + i
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:20:03) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
for i in a:
	s = s + "" + (-i)
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:20:21) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
for i in a:
	s = s + "" + i
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:22:28) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
for i in range(-1):
	s = s + "" + i
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:22:39) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
for i in range(-1, a):
	s = s + "" + i
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:23:41) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
for i in (-1)*a:
	s = s + "" + i
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:25:30) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""

for i in range(a):
	s = s + "" + i
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:27:08) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0
print(size(a))
for i in a:
	
	s = s + "" + i
	b = b + 1
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:27:29) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0
print(size(a))
for i in a:
	
	s = s + "" + i
	b = b + 1
	
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:30:43) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0
print(size(a))
for i in a:
	
	s = s + "" + i
	b = b + 1
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:32:03) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in range(a[-1], a[0]):
	
	s = s + "" + i
	b = b + 1
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:32:35) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in range(a[-1]):
	
	s = s + "" + i
	b = b + 1
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:32:47) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in range(a):
	
	s = s + "" + i
	b = b + 1
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:34:52) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
	
for h in range(b):
	s = s + "" + a[-b]
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:35:13) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
	
for h in range(b):
	s = s + "" + a[-h]
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:35:54) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
	
for h in range(b):
	s = s + "" + a[b - h]
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:36:36) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
	
for h in range(b):
	s = s + "" + a[z]
	z = b - h
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:37:11) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
	
for h in range(b):
	s = s + "" + a[h]
	
	print(s)
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:38:05) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
	
for h in range(0, b):
	s = s + "" + a[b]
	
	print(s)
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:40:09) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
	
for h in range(b):
	s = s + "" + a[b]
	
	print(h)
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:40:20) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
	
for h in range(b):
	s = s + "" + a[h]
	
	print(h)
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:40:44) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
	
for h in range(b, 0):
	s = s + "" + a[h]
	
	print(h)
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:41:00) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
	
for h in range(b:0):
	s = s + "" + a[h]
	
	print(h)
	
	
print(s)
-- ERROR:
File "XXXX", line 13
    for h in range(b:0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:41:55) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
	
for h in range(b):
	s = s + "" + a[d]
	d = b - h
	print(h)
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:42:11) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
d = b	
for h in range(b):
	s = s + "" + a[d]
	d = b - h
	print(h)
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:42:38) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	
	b = b + 1
	
for h in range(b):
	s = s + "" + a[b]

	print(h)
	
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:44:45) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	
	s = s + "" + a[i]
	b = b + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:45:06) 
-- CODE:
from numpy import*

a = input("digite a palava: ")
s = ""
b = 0

for i in a:
	s = s + "" + a[i]
	b = b + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
